--- a/Demo/uMain.fmx
+++ b/Demo/uMain.fmx
@@ -11,33 +11,16 @@ object Form2: TForm2
   OnCreate = FormCreate
   DesignerMasterStyle = 0
   object SVGButton1: TSVGButton
-    Position.X = 200.000000000000000000
-    Position.Y = 144.000000000000000000
-    Size.Width = 161.000000000000000000
+    StyledSettings = [Family, Size, Style]
+    Position.X = 104.000000000000000000
+    Position.Y = 232.000000000000000000
+    Size.Width = 121.000000000000000000
     Size.Height = 49.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 1
+    TabOrder = 0
     Text = 'SVGButton1'
+    TextSettings.FontColor = claCrimson
+    OnClick = SVGButton1Click
     IconName = 'Save'
-    IconPadding.Left = 8.000000000000000000
-    IconColor = claBrown
-    IconColorHover = xFFB34A4A
-    IconColorDown = xFF8C2424
-    IconColorDisabled = xFFB0BEC5
-    IconSecondaryColor = xFF90CAF9
-  end
-  object SVGSpeedButton1: TSVGSpeedButton
-    Position.X = 200.000000000000000000
-    Position.Y = 216.000000000000000000
-    Size.Width = 161.000000000000000000
-    Size.Height = 49.000000000000000000
-    Size.PlatformDefault = False
-    Text = 'SVGSpeedButton1'
-    IconName = 'Trash'
-    IconColor = xFF1E88E5
-    IconColorHover = xFF409AE9
-    IconColorDown = xFF1974C3
-    IconColorDisabled = xFFB0BEC5
-    IconSecondaryColor = xFF90CAF9
   end
 end
